syntax = "proto3";

package ampb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message AnimeMovieTitle {
    int64 ID = 1;
    string titleText = 2;
    google.protobuf.Timestamp createdAt = 3;
}

message AnimeMovieTitleRequest {
    repeated string official = 1;
    repeated string short = 2;
    repeated string other = 3;
}

message AnimeMovieTitleResponse {
    repeated AnimeMovieTitle official = 1;
    repeated AnimeMovieTitle short = 2;
    repeated AnimeMovieTitle other = 3;
}